--- a/index.html
+++ b/index.html
@@ -1,13 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>new-year-new-me-index</title>
+    <title>New Year Me</title>
     <link rel="stylesheet" href="styles/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Work+Sans&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+    <section>
+        <header>
+            <nav>
+                <h2 class="nav-title">Be<span class="text-primary">l</span>ive </span>U<span
+                        class="text-primary">s</span></h2>
+                <ul>
+                    <li>Home</li>
+                    <li>Blogs</li>
+                    <li>Explore</li>
+                    <li><button class="btn-primary">About Us</button></li>
+                </ul>
+            </nav>
+            <!-- header banner -->
+            <!-- <div></div> -->
+                <div class="banner"> 
+                    <h1 class="banner-title">All Thinks Are 
+                    Possible If You 
+                    believe</h1>
+                    <p class="banner-info">There are many variations of passages of Lorem Ipsum 
+                        available, but the majority have suffered alteration in some 
+                        form, by injected humour, or randomised words</p>
+                </div>
+
+        </header>
+    </section>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
+
 </body>
+
 </html>
