--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
                 </ul>
             </nav>
             <!-- header banner -->
-            <!-- <div></div> -->
                 <div class="banner"> 
                     <h1 class="banner-title">All Thinks Are 
                     Possible If You 
@@ -34,6 +33,7 @@
                     <p class="banner-info">There are many variations of passages of Lorem Ipsum 
                         available, but the majority have suffered alteration in some 
                         form, by injected humour, or randomised words</p>
+                        <button class="btn-Contact">Contact Us</button>
                 </div>
 
         </header>
