added some information

--- a/index.html
+++ b/index.html
@@ -26,19 +26,24 @@
                 </ul>
             </nav>
             <!-- header banner -->
-                <div class="banner"> 
-                    <h1 class="banner-title">All Thinks Are 
-                    Possible If You 
+            <div class="banner">
+                <h1 class="banner-title">All Thinks Are
+                    Possible If You
                     believe</h1>
-                    <p class="banner-info">There are many variations of passages of Lorem Ipsum 
-                        available, but the majority have suffered alteration in some 
-                        form, by injected humour, or randomised words</p>
-                        <button class="btn-Contact">Contact Us</button>
-                </div>
-
+                <p class="banner-info">There are many variations of passages of Lorem Ipsum
+                    available, but the majority have suffered alteration in some
+                    form, by injected humour, or randomised words</p>
+                <button class="btn-Contact">Contact Us</button>
+            </div>
         </header>
     </section>
+        <!-- "My failures of previous year"-Section -->
     <main>
+        <section class="information">
+            <h2 class="info-title">My Failures of Previous Year</h2>
+            <p class="info-division">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+            <p class="info-sub-division"></p>
+        </section>
 
     </main>
     <footer>
