--- a/index.html
+++ b/index.html
@@ -37,12 +37,26 @@
             </div>
         </header>
     </section>
-        <!-- "My failures of previous year"-Section -->
+    <!-- "My failures of previous year"-Section -->
     <main>
-        <section class="information">
-            <h2 class="info-title">My Failures of Previous Year</h2>
-            <p class="info-division">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
-            <p class="info-sub-division"></p>
+        <section class="section-info">
+            <h2 class="section-title">My Failures of Previous Year</h2>
+            <p class="section-info-division">Contrary to popular belief, Lorem Ipsum is not simply random text. It has
+                roots in a
+                piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+            <ul class="section-info-sub-division">
+                <li>Contrary to popular belief, is not simply.</li>
+                <li>Contrary to popular belief.</li>
+                <li>Contrary to popular,is not simply.</li>
+                <li>Contrary to popular belief, is not simply.</li>
+                <li>Contrary to popular simply.</li>
+            </ul>
+            <img class="picture" src="images/person.png">
+        </section>
+        <!-- My Plans  Section-->
+        <section class="plan-section">
+            <h1 class="plan-title">My Plans</h1>
+
         </section>
 
     </main>
