--- a/index.html
+++ b/index.html
@@ -45,11 +45,13 @@
                 roots in a
                 piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
             <ul class="section-info-sub-division">
-                <li>Contrary to popular belief, is not simply.</li>
-                <li>Contrary to popular belief.</li>
-                <li>Contrary to popular,is not simply.</li>
-                <li>Contrary to popular belief, is not simply.</li>
-                <li>Contrary to popular simply.</li>
+                <li><img class="icon-pic" src="images/icons/blue tik.png"> Contrary to popular belief, is not simply.
+                </li>
+                <li><img class="icon-pic" src="images/icons/blue tik.png"> Contrary to popular belief.</li>
+                <li><img class="icon-pic" src="images/icons/blue tik.png"> Contrary to popular,is not simply.</li>
+                <li><img class="icon-pic" src="images/icons/blue tik.png"> Contrary to popular belief, is not simply.
+                </li>
+                <li><img class="icon-pic" src="images/icons/blue tik.png"> Contrary to popular simply.</li>
             </ul>
             <img class="picture" src="images/person.png">
         </section>
