fixed some styles

--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
             <div class="subscribe-section">
                 <h1 class="subscribe-head">Subscribe</h1>
                 <input type="email" name="email" id="email" placeholder="Enter your Email">
-
             </div>
             <button class="sub-btn">Subscribe</button>
+            <div class="btn-bg"></div>
         </div>
 </body>
 
