Add Readme file

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Year Me</title>
+    <title>
+        New Year Me
+    </title>
+    <!-- css file -->
     <link rel="stylesheet" href="styles/index.css">
+    <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Work+Sans&display=swap" rel="stylesheet">
@@ -17,92 +21,149 @@
         <header>
             <nav>
                 <h2 class="nav-title">Be<span class="text-primary">l</span>ive </span>U<span
-                        class="text-primary">s</span></h2>
+                        class="text-primary">s</span>
+                </h2>
                 <ul>
-                    <li>Home</li>
-                    <li>Blogs</li>
-                    <li>Explore</li>
-                    <li><button class="btn-primary">About Us</button></li>
+                    <li>
+                        Home
+                    </li>
+                    <li>
+                        Blogs
+                    </li>
+                    <li>
+                        Explore
+                    </li>
+                    <li>
+                        <button class="btn-primary">
+                            About Us
+                        </button>
+                    </li>
                 </ul>
             </nav>
             <!-- header banner -->
             <div class="banner">
-                <h1 class="banner-title">All Thinks Are
+                <h1 class="banner-title">
+                    All Thinks Are
                     Possible If You
-                    believe</h1>
-                <p class="banner-info">There are many variations of passages of Lorem Ipsum
+                    believe
+                </h1>
+                <p class="banner-info">
+                    There are many variations of passages of Lorem Ipsum
                     available, but the majority have suffered alteration in some
-                    form, by injected humour, or randomised words</p>
-                <button class="btn-Contact">Contact Us</button>
+                    form, by injected humour, or randomised words
+                </p>
+                <button class="btn-Contact">
+                    Contact Us
+                </button>
             </div>
         </header>
     </section>
     <!-- "My failures of previous year"-Section -->
     <main>
         <section class="section-info">
-            <h2 class="section-title">My Failures of Previous Year</h2>
-            <p class="section-info-division">Contrary to popular belief, Lorem Ipsum is not simply random text. It has
+            <h2 class="section-title">
+                My Failures of Previous Year
+            </h2>
+            <p class="section-info-division">
+                Contrary to popular belief, Lorem Ipsum is not simply random text. It has
                 roots in a
-                piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.
+            </p>
             <ul class="section-info-sub-division">
-                <li><img class="icon-pic" src="images/icons/blue tik.png"> Contrary to popular belief, is not simply.
+                <li>
+                    <img class="icon-pic" src="images/icons/blue tik.png">
+                    Contrary to popular belief, is not simply.
                 </li>
-                <li><img class="icon-pic" src="images/icons/blue tik.png"> Contrary to popular belief.</li>
-                <li><img class="icon-pic" src="images/icons/blue tik.png"> Contrary to popular,is not simply.</li>
-                <li><img class="icon-pic" src="images/icons/blue tik.png"> Contrary to popular belief, is not simply.
+                <li>
+                    <img class="icon-pic" src="images/icons/blue tik.png"> Contrary to popular belief.
                 </li>
-                <li><img class="icon-pic" src="images/icons/blue tik.png"> Contrary to popular simply.</li>
+                <li>
+                    <img class="icon-pic" src="images/icons/blue tik.png"> Contrary to popular,is not simply.
+                </li>
+                <li>
+                    <img class="icon-pic" src="images/icons/blue tik.png"> Contrary to popular belief, is not simply.
+                </li>
+                <li>
+                    <img class="icon-pic" src="images/icons/blue tik.png"> Contrary to popular simply.
+                </li>
             </ul>
             <img class="picture" src="images/person.png">
         </section>
         <!-- My Plans  Section-->
         <section class="plan-section">
-            <h1 class="plan-title">My Plans</h1>
+            <h1 class="plan-title">
+                My Plans
+            </h1>
             <div class="icon-main-con">
                 <div class="icon-division">
                     <img class="plan-icon" src="images/icons/web.png">
-                    <h3 class="plan-header">Web Development</h3>
-                    <p class="plan-des">I want to start</p>
+                    <h3 class="plan-header">
+                        Web Development
+                    </h3>
+                    <p class="plan-des">
+                        I want to start
+                    </p>
                 </div>
                 <div class="icon-division">
                     <img class="plan-icon" src="images/icons/js.png">
-                    <h3 class="plan-header">Javascript</h3>
-                    <p class="plan-des">I want to learn</p>
+                    <h3 class="plan-header">
+                        Javascript
+                    </h3>
+                    <p class="plan-des">
+                        I want to learn
+                    </p>
                 </div>
                 <div class="icon-division">
                     <img class="plan-icon" src="images/icons/smoke.png">
-                    <h3 class="plan-header">Smoking Habit</h3>
-                    <p class="plan-des">I want to end</p>
+                    <h3 class="plan-header">
+                        Smoking Habit
+                    </h3>
+                    <p class="plan-des">
+                        I want to end
+                    </p>
                 </div>
                 <div class="icon-division">
                     <img class="plan-icon" src="images/icons/ecom.png">
-                    <h3 class="plan-header">Ecommerce</h3>
-                    <p class="plan-des">I want to develop</p>
+                    <h3 class="plan-header">
+                        Ecommerce
+                    </h3>
+                    <p class="plan-des">
+                        I want to develop
+                    </p>
                 </div>
             </div>
-
         </section>
         <!-- watch image and gradient -->
         <section>
             <div class="img-conteiner">
                 <img class="image" src="images/gradient2.png">
-                <h1 class="img-text">Always keep a positive mindset</h1>
-                <button class="btn-call">Call Now</button>
+                <h1 class="img-text">
+                    Always keep a positive mindset
+                </h1>
+                <button class="btn-call">
+                    Call Now
+                </button>
             </div>
         </section>
-
     </main>
     <!-- footer section -->
     <footer class="footer-main">
         <div class="footer-main-info">
             <div class="future-section">
-                <h1 class="future-head">Future</h1>
-                <div class="future-info">There are many variations of passages of Lorem Ipsum available, but the
+                <h1 class="future-head">
+                    Future
+                </h1>
+                <div class="future-info">
+                    There are many variations of passages of Lorem Ipsum available, but the
                     majority
                     have suffered alteration in some form, by injected humour, or randomised words
                 </div>
-                <p class="future-email">Email : info@gmail.com</p>
-                <p class="future-phone">Phone : 01500 00 00 00</p>
+                <p class="future-email">
+                    Email : info@gmail.com
+                </p>
+                <p class="future-phone">
+                    Phone : 01500 00 00 00
+                </p>
                 <div class="main-icon-container">
                     <img src="images/icons/fb.png" class="sub-icon">
                     <img src="images/icons/twitter.png" class="sub-icon">
@@ -112,10 +173,14 @@
         </div>
         <div class="subscribe-main-info">
             <div class="subscribe-section">
-                <h1 class="subscribe-head">Subscribe</h1>
+                <h1 class="subscribe-head">
+                    Subscribe
+                </h1>
                 <input type="email" name="email" id="email" placeholder="Enter your Email">
             </div>
-            <button class="sub-btn">Subscribe</button>
+            <button class="sub-btn">
+                Subscribe
+            </button>
             <div class="btn-bg"></div>
         </div>
 </body>
